# CSS30-EventDriverArchitecture

./: .gitignore  Criptocoins.json  README.md  Topics.json  criptocoin_producer.py  requirements.txt
Consumer/: main.py
Criptocoin_Consumer_UI/: CMakeLists.txt  Criptocoin_Consumer_UI.cpp  Criptocoin_Consumer_UI.sln  Criptocoin_Consumer_UI.vcxproj  Criptocoin_Consumer_UI.vcxproj.filters  imgui.ini
Producer/: main.py
